--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ branches:
     - master
 install:
   - sudo pip install selenium
+  - sudo pip install bson
+  - sudo pip install pymongo
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install mongodb; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6; fi
